refactor: Ingress resources use Fabric8